IVYPORTAL-6333: Refactor Header and header Menu including subpages for serenity - Fixed sidebar on IE - increase margin for checkbox

--- a/AxonIvyPortal/PortalStyle/webContent/resources/primefaces-serenity-ivy/theme.scss
+++ b/AxonIvyPortal/PortalStyle/webContent/resources/primefaces-serenity-ivy/theme.scss
@@ -590,6 +590,10 @@ body .ui-chkbox .ui-chkbox-box.ui-state-active .ui-chkbox-icon {
     width: auto;
     margin: 0px 0px 0px 12px !important;
 }
+.ui-chkbox.ui-widget {
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
 
 /*Style for announcement*/
 .announcement-message-customizable {
